--- a/src/Availy/Application/elements/availy-shared-styles.html
+++ b/src/Availy/Application/elements/availy-shared-styles.html
@@ -12,12 +12,13 @@
                 --availy-white-1: #fff;
                 --availy-green-1: #0c0;
                 --availy-red-1: #c00;
+                --availy-blue-1: #eef9ff;
+                --availy-blue-2: #0099c1;
 
                 --polymorph-app-background-color: var(--availy-black-1);
 
                 /* footer */
                 --polymorph-app-footer-height: 0;/* no padding needed for non-fixed footer */
-
             }
         </style>
     </template>
